:sparkles: integrando modulo de multas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,10 @@
         "Formik",
         "Ingrese",
         "Iniciar",
+        "otros",
         "presionado",
-        "sesion"
-    ]
+        "sesion",
+        "zustand"
+    ],
+    "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
