se agrega navegacion en el componente trafficTicket

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "cSpell.words": [
         "aling",
+        "Datos",
         "Formik",
+        "foto",
+        "Infraccion",
         "Ingrese",
         "Iniciar",
         "otros",
         "presionado",
         "sesion",
+        "Tomar",
         "zustand"
     ],
     "CodeGPT.apiKey": "CodeGPT Plus Beta"
