se agrega componente camera

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "aling",
         "Datos",
+        "Entypo",
         "Formik",
         "foto",
         "Infraccion",
