--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(Argos) to access your camera",
+          "microphonePermission": "Allow $(Argos) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
+    ],
     "name": "ArgosTS",
     "slug": "ArgosTS",
     "version": "1.0.0",
