--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "yup": "^1.4.0",
     "zustand": "^4.5.2",
     "expo-camera": "~15.0.9",
-    "expo-media-library": "~16.0.3"
+    "expo-media-library": "~16.0.3",
+    "expo-sqlite": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
