--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "permisos",
         "presionado",
         "sesion",
+        "Siguiente",
         "tienes",
         "tomada",
         "Tomar",
