--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android:dev": "NODE_ENV=development expo start --android",
+    "android:prod": "NODE_ENV=production expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
@@ -15,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.8",
     "expo-camera": "~15.0.9",
     "expo-image-picker": "^15.0.5",
@@ -24,6 +26,7 @@
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-geolocation-service": "^5.3.1",
