--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "yup": "^1.4.0",
