--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -23,10 +24,12 @@
     "expo-location": "^17.0.1",
     "expo-media-library": "~16.0.3",
     "expo-permissions": "^14.4.0",
+    "expo-splash-screen": "~0.27.4",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-fs": "^2.20.0",
@@ -36,12 +39,14 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "reflect-metadata": "^0.2.2",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.3.3"
   },
   "private": true
