--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@libsql/client": "^0.6.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
+    "babel-plugin-inline-import": "^3.0.0",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
     "expo": "~51.0.8",
     "expo-camera": "~15.0.9",
+    "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-image-picker": "^15.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-location": "^17.0.1",
     "expo-media-library": "~16.0.3",
     "expo-permissions": "^14.4.0",
@@ -28,25 +34,34 @@
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-ui-lib": "^7.24.0",
+    "react-native-vector-icons": "^10.1.0",
     "reflect-metadata": "^0.2.2",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/better-sqlite3": "^7.6.10",
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.2",
+    "drizzle-kit": "^0.22.7",
     "typescript": "~5.3.3"
   },
   "private": true
